--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -10,189 +10,220 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout
-        android:id="@+id/back"
+    <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="0dp"
-        android:layout_height="347dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
         android:background="#f2f2f2"
-        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        tools:layout_constraintLeft_creator="1">
+        app:layout_constraintTop_toTopOf="parent">
 
-    </LinearLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
 
-    <EditText
-        android:id="@+id/editText_chords"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editText_lyrics"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText_lyrics"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_lyrics" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Tytuł"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
 
-    <EditText
-        android:id="@+id/editText_title"
-        android:layout_width="225dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="13dp"
-        app:layout_constraintRight_toRightOf="@+id/back"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toTopOf="@+id/back"
-        android:layout_marginRight="13dp" />
+            <EditText
+                android:id="@+id/editText_title"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="356dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="356dp" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="30dp"
-        tools:layout_editor_absoluteY="30dp"
-        tools:layout_editor_absoluteX="0dp" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Śpiewnik"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
 
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline3"
-        app:layout_constraintGuide_begin="25dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="25dp" />
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        android:layout_marginRight="6dp"
-        android:padding="10dp"
-        android:text="Tytuł"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_title"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_title"
-        android:layout_marginEnd="6dp"
-        app:layout_constraintTop_toTopOf="@+id/editText_title" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:padding="10dp"
-        android:text="Śpiewnik"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView2"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Strona"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
 
-    <EditText
-        android:id="@+id/editText_nr"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editText_page"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText_page"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_page" />
+            <EditText
+                android:id="@+id/editText_page"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
 
-    <EditText
-        android:id="@+id/editText_page"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintRight_toRightOf="@+id/spinner2"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="45dp"
-        app:layout_constraintLeft_toLeftOf="@+id/spinner2"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="100dp"
-        android:layout_height="85dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:padding="10dp"
-        android:text="Tekst"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_lyrics"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Numer"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_marginRight="6dp"
-        android:padding="10dp"
-        android:text="Strona"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_page"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:layout_marginEnd="6dp" />
+            <EditText
+                android:id="@+id/editText_nr"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_marginRight="6dp"
-        android:padding="10dp"
-        android:text="Numer"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_nr"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:layout_marginEnd="6dp"
-        android:layout_marginTop="1dp" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:padding="10dp"
-        android:text="Akordy"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_chords"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Tekst"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
+
+            <EditText
+                android:id="@+id/editText_lyrics"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_editor_absoluteY="8dp">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="Akordy"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="360dp" />
+
+            <EditText
+                android:id="@+id/editText_chords"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="328dp"
+                tools:layout_editor_absoluteY="360dp" />
+        </TableRow>
+
+    </TableLayout>
 
     <Button
         android:id="@+id/button_add"
@@ -202,7 +233,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="15dp"
         android:background="#5fcb34"
         android:text="Dodaj"
         android:textColor="@android:color/white"
@@ -210,32 +241,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <EditText
-        android:id="@+id/editText_lyrics"
-        android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_nr"
-        app:layout_constraintRight_toRightOf="@+id/editText_nr"
-        app:layout_constraintTop_toBottomOf="@+id/editText_nr"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
-
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText_page"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_title"
-        app:layout_constraintRight_toRightOf="@+id/editText_title"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
 </android.support.constraint.ConstraintLayout>
