--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/back"
         android:layout_width="0dp"
-        android:layout_height="280dp"
+        android:layout_height="260dp"
         android:layout_marginEnd="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
@@ -69,7 +69,7 @@
 
         <Spinner
             android:id="@+id/search_place"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginBottom="15dp"
             android:layout_marginEnd="15dp"
@@ -85,7 +85,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="15dp"
         android:background="#5fcb34"
         android:text="Wyświetl"
         android:textColor="@android:color/white"
